# uniffle-x

./: .gitignore  Cargo.toml  README.md  build.rs  licenserc.toml
.cargo/: config.toml
.github/workflows/: dev.yml
src/: app.rs  await_tree.rs  benchmark_client.rs  config.rs  datanode.rs  error.rs  grpc.rs  lib.rs  main.rs  metric.rs  readable_size.rs  schedule.rs  store.rs  util.rs
src/http/: await_tree.rs  http_service.rs  jeprof.rs  metrics.rs  mod.rs  pprof.rs
src/mem_allocator/: default.rs  error.rs  jemalloc.rs  mod.rs  profiling.rs  system_std.rs
src/proto/: mod.rs  uniffle.proto  uniffle.rs
src/store/: hdfs.rs  hybrid.rs  localfile.rs  memory.rs  mod.rs
src/store/mem/: mod.rs
tests/: write_read.rs
