[package]
name = "uniffle-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="datanode"
path= "src/main.rs"

[dependencies]
anyhow = "1" # 错误处理
tokio = { version = "1.28.2", features = ["full" ] } # 异步网络库
tokio-rustls = "0.22" # 处理 TLS
tokio-stream = { version = "0.1", features = ["sync"] } # 处理 stream
tokio-util = { version = "0.6", features = ["compat"]} # tokio 和 futures 的兼容性库
toml = "0.7.4" # toml 支持
tracing = "0.1" # 日志处理
tracing-appender = "0.2" # 文件日志
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # 日志处理
tonic = "0.9.1"
prost = "0.11.8"
bytes = "1" # 高效处理网络 buffer 的库
tonic-build = "0.9.1"
thiserror = "1" # 错误定义和处理
dashmap = "5.4.0"
log = "0.4.17"
env_logger = "0.10.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5"
tempdir = "0.3.7"
async-trait = "0.1.68"
futures = "0.3"
serde = { version = "1", features = ["derive"] } # 序列化/反序列化
async-channel = "1.8.0"
croaring = "0.8.1"
warp = "0.3.2"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
crc32fast = "1.3.2"

[build-dependencies]
tonic-build = "0.9.1"

[dev-dependencies]
env_logger = "0.10.0"
